--- a/package.json
+++ b/package.json
@@ -5,16 +5,21 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "tsc -p",
-    "dev": "npm run build && node src/Program.js"
+    "build": "tsc --build",
+    "build:dev": "npm run build && node src/Program.js",
+    "start:dev": "npx ts-node Program.ts"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@fastify/env": "^4.3.0",
     "@ngneat/falso": "^7.2.0",
     "fastify": "^4.26.2",
-    "ioredis": "^5.3.2"
+    "fastify-plugin": "^4.5.1",
+    "ioredis": "^5.3.2",
+    "mysql2": "^3.9.2",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
