--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "npm run build && node src/test.js",
     "build": "tsc --build",
     "build:dev": "npm run build && node src/Program.js",
     "start:dev": "npx ts-node Program.ts"
@@ -15,6 +15,8 @@
   "dependencies": {
     "@fastify/env": "^4.3.0",
     "@ngneat/falso": "^7.2.0",
+    "casual": "^1.6.2",
+    "chance": "^1.1.11",
     "fastify": "^4.26.2",
     "fastify-plugin": "^4.5.1",
     "ioredis": "^5.3.2",
