falso service comming together

--- a/config.json
+++ b/config.json
@@ -21,8 +21,7 @@
         "preceeded": true,
         "preceededKey": "@",
         "valueIsFunc": true,
-        "namespace": "faker-js",
-        "mainObj": "faker",
+        "namespace": "ngneat",
         "constructorArgs": {}
     }
 }
