--- a/package.json
+++ b/package.json
@@ -8,7 +8,14 @@
     "test:dev": "npx ts-node test.ts",
     "build": "tsc --build",
     "build:dev": "npm run build && node src/Program.js",
-    "start:dev": "npx ts-node Program.ts"
+    "start:dev": "npx ts-node Program.ts",
+    "start:prod": "npm run build && node src/Program.js",
+    "typeorm": "typeorm-ts-node-commonjs",
+    "migrate:create": "typeorm-ts-node-commonjs migration:create",
+    "migrate": "typeorm-ts-node-commonjs migration:run -d ./core/services/database/database.service.ts",
+    "migrate:js": "typeorm-ts-node-commonjs migration:run -d dist/core/services/database/database.service.js",
+    "migrate:down": "typeorm-ts-node-commonjs migration:revert -d ./core/services/database/database.service.ts",
+    "entity:create": "typeorm-ts-node-commonjs entity:create"
   },
   "keywords": [],
   "author": "",
@@ -21,6 +28,7 @@
     "fastify": "^4.26.2",
     "fastify-plugin": "^4.5.1",
     "ioredis": "^5.3.2",
+    "mongoose": "^8.2.2",
     "mysql2": "^3.9.2",
     "typeorm": "^0.3.20"
   },
