--- a/package.json
+++ b/package.json
@@ -30,11 +30,13 @@
     "ioredis": "^5.3.2",
     "mongoose": "^8.2.2",
     "mysql2": "^3.9.2",
-    "typeorm": "^0.3.20"
+    "typeorm": "^0.3.20",
+    "joi": "^17.9.2"
   },
   "devDependencies": {
     "@faker-js/faker": "^8.4.1",
     "@types/ioredis": "^5.0.0",
-    "@types/node": "^20.11.25"
+    "@types/node": "^20.11.25",
+    "joi": "^17.9.2"
   }
 }
